--- a/css/about-style.css
+++ b/css/about-style.css
@@ -8,7 +8,7 @@
 }
 
 header {
-    position: fixed;
+    position: relative;
     right: 0;
     left: 0;
     top: 0;
@@ -22,7 +22,7 @@ header {
     padding: 20px 50px;
     background: transparent;
     border-radius: 20px;
-    background-color: #393E46;
+    background-color: #2f333a;
 
 }
 
@@ -123,13 +123,6 @@ nav a.active{
 }
 
 
-.about{
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #CC3843;
-}
 
 .about-section{
     background: url("../images/landing_bg_2.jpg") no-repeat left;
@@ -177,6 +170,10 @@ nav a.active{
     .inner-container{
         padding: 80px;
     }
+    header{
+        position: relative;
+    }
+
 }
 
 @media screen and (max-width:1000px){
@@ -193,16 +190,15 @@ nav a.active{
 }
 
 @media screen and (max-width:600px){
-    .about{
-        width:100%;
-        margin:0;
-        flex-basis: 100%;
-    }
+
     .about-section{
         padding: 0;
     }
     .inner-container{
-        padding: 60px;
+        box-sizing: border-box;
+        padding: 20px;
+        width: 100%;
+
     }
 }
 .container {
