--- a/css/product.css
+++ b/css/product.css
@@ -7,21 +7,20 @@
     text-decoration: none;
 }
 header{
-    position: fixed;
+    position: relative;
     right: 0;
     left: 0;
     top: 0;
     z-index: 1000;
-    width: calc(100% - 200px); /* Adjust the width */
-    margin: 20px 100px;
+    width: calc(100% - 200px);
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding:20px 50px;
-
+    margin: 20px 100px;
     background: transparent;
     border-radius: 20px;
-    background-color: #393E46;
+    background-color: #2f333a;
 
 }
 .logo{
