--- a/css/product.css
+++ b/css/product.css
@@ -49,9 +49,8 @@ nav ul li a {
     font-size: 15px;
     font-weight: 500;
     border-bottom: 2px solid transparent;
-    position: relative; /* Add this line if you want the ::after and ::before pseudo-elements to position themselves relative to the anchor tags */
+    position: relative;
 }
-
 nav ul li a::after, nav ul li a::before {
     content: "";
     display: block;
@@ -140,28 +139,28 @@ body{
 }
 .select-color {
     display: flex;
-    align-items: center; /* Align items vertically */
+    align-items: center; 
 }
 
 .select-color h3 {
     font-size: 24px;
-    margin-right: 10px; /* Add some space between the h3 and the color options */
+    margin-right: 10px; 
 }
 
 .select-color input[type="radio"] {
-    display: none; /* Hide the default radio buttons */
+    display: none; 
 }
 
 .select-color input[type="radio"] + span {
     display: inline-block;
     width: 30px;
     height: 30px;
-    border-radius: 50%; /* Make the color options circular */
-    border: 1px solid #000; /* Add a border */
-    margin-right: 10px; /* Add this line */
+    border-radius: 50%; 
+    border: 1px solid #000; 
+    margin-right: 10px; 
 }
 
-/* Change the color of the span based on the id of the input */
+
 .select-color #red + span {
     background-color: red;
 }
@@ -185,7 +184,6 @@ body{
 .select-color #pink + span {
     background-color: pink;
 }
-/* Change the border of the span to indicate the selected color */
 .select-color input[type="radio"]:checked + span {
     border: 2px solid #000;
 }
@@ -421,10 +419,7 @@ ul {
     color: #CC3843;
 }
 
-@media(max-width: 574px) {
-    .footer-col {
-        width: 100%;
-    }
+@media screen and(max-width: 574px) {
     .product-text h3{
         font-size: 1.6rem;
     }
@@ -440,7 +435,7 @@ ul {
     }
 }
 
-@media(max-width:1024px){
+@media screen and (max-width:1024px){
     nav ul{
         display: none;
     }
@@ -457,7 +452,11 @@ ul {
         transform: scale(1.1) rotate(45deg);
     }
 }
-@media(max-width:820px){
+@media screen and (max-width:820px){
+    header{
+        margin: 0;
+        width: 100%;
+    }
     .footer-col {
         width: 50%;
         margin-bottom: 30px;
